...
        super.viewDidLoad()
        view.backgroundColor = .white
        guard let coordinator = coordinator else { return }
        conversationView = ConversationView(viewModel: ConversationView.ViewModel(id: id), coordinator: coordinator)
        conversationView?.injectIn(controller: self)
        setUpNavigationBarButtons()
        view.accessibilityIdentifier = "dialogScreenView"
    }

    override func viewWillAppear(_ animated: Bool) {
        self.tabBarController?.tabBar.isHidden = true
    }
    override func viewWillDisappear(_ animated: Bool) {
...
