...
    private lazy var directButton: UIButton = {
        let button = UIButton()
        button.tintColor = .black
        button.addTarget(self, action: #selector(directButtonPressed), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setBackgroundImage(.message, for: .normal)
        button.accessibilityIdentifier = "buttonToDirectMessages"
        return button
    }()
    // swiftlint:enable all

    override init (frame: CGRect) {
        super.init(frame: .zero)
...
