...
                    section.orthogonalScrollingBehavior = .continuous
                    return section
            }
        }
        let collectionView = UICollectionView(frame: .zero, collectionViewLayout: layout)
        collectionView.translatesAutoresizingMaskIntoConstraints = false
        collectionView.accessibilityIdentifier = "DirectPageCollectionView"
        return collectionView
    }()

    init(viewModel: DirectPage) {
        self.viewModel = viewModel
        super.init(nibName: nil, bundle: nil)
...
