...
    private var viewModel: HomePage
    private var cancellabeles: Set<AnyCancellable> = []
    private var isLoading: Bool = true
    private lazy var collectionView: UICollectionView = {
        let collectionView = UICollectionView(frame: .zero, collectionViewLayout: createLayout())
        collectionView.translatesAutoresizingMaskIntoConstraints = false
        collectionView.accessibilityIdentifier = "homePageCollectionView"
        return collectionView
    }()

    init(viewModel: HomePage) {
        self.viewModel = viewModel
        super.init(nibName: nil, bundle: nil)
...
